ado_qualification/log.txt
False: Non-zero return code, probably a syntax error occurred\ntime=1698785269.3810158 gym-duckietown 2019.0.0

time=1698785269.5355003 Registering gym environment id: Duckietown-4way-v0
time=1698785269.5355868 Registering gym environment id: Duckietown-ado_map_1-v0
time=1698785269.5356243 Registering gym environment id: Duckietown-ado_map_2-v0
time=1698785269.5356767 Registering gym environment id: Duckietown-loop_dyn_duckiebots-v0
time=1698785269.535719 Registering gym environment id: Duckietown-loop_empty-v0
time=1698785269.5357769 Registering gym environment id: Duckietown-loop_obstacles-v0
time=1698785269.5358613 Registering gym environment id: Duckietown-loop_one_duckie-v0
time=1698785269.5359397 Registering gym environment id: Duckietown-loop_only_duckies-v0
time=1698785269.5360303 Registering gym environment id: Duckietown-loop_pedestrians-v0
time=1698785269.53609 Registering gym environment id: Duckietown-small_loop-v0
time=1698785269.5361316 Registering gym environment id: Duckietown-small_loop_cw-v0
time=1698785269.5361774 Registering gym environment id: Duckietown-straight_road-v0
time=1698785269.5362318 Registering gym environment id: Duckietown-straight_road_10_tiles_no_start_tile-v0
time=1698785269.5362813 Registering gym environment id: Duckietown-straight_road_no_start_tile-v0
time=1698785269.5363326 Registering gym environment id: Duckietown-straight_road_trafficlight-v0
time=1698785269.5363812 Registering gym environment id: Duckietown-straight_road_with_side_floor-v0
time=1698785269.5364304 Registering gym environment id: Duckietown-udem1-v0
time=1698785269.5364773 Registering gym environment id: Duckietown-zigzag_dists-v0
Traceback (most recent call last):
  File "/usr/lib/python3.6/runpy.py", line 193, in _run_module_as_main
    "__main__", mod_spec)
  File "/usr/lib/python3.6/runpy.py", line 85, in _run_code
    exec(code, run_globals)
  File "/home/appuser/aido-auto/gym-duckietown/gym_duckietown/tasks/ado_qualification/checker.py", line 6, in <module>
    checkers=[FloatStopAtCoordinatesChecker(), TimeChecker()]
  File "/home/appuser/aido-auto/gym-duckietown/gym_duckietown/tasks/solution_evaluator.py", line 88, in __init__
    super().__init__(checkers)
  File "/home/appuser/aido-auto/gym-duckietown/gym_duckietown/tasks/solution_evaluator.py", line 31, in __init__
    solution_file_as_module = importlib.import_module(self.args.solution_file_as_module)
  File "/usr/lib/python3.6/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 994, in _gcd_import
  File "<frozen importlib._bootstrap>", line 971, in _find_and_load
  File "<frozen importlib._bootstrap>", line 955, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 665, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 674, in exec_module
  File "<frozen importlib._bootstrap_external>", line 781, in get_code
  File "<frozen importlib._bootstrap_external>", line 741, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/appuser/aido-auto/gym-duckietown/gym_duckietown/tasks/ado_qualification/solutions/solution.py", line 195
    LOG: target_info", target_info)
    ^
IndentationError: unexpected unindent
